# pasta-bin

./: .gitignore  Cargo.toml  README.md  Rocket.toml
pastas/: 237.json  example.txt
src/: main.rs  password.rs
