[package]
name = "pastabin"
version = "0.1.2"
edition = "2021"
authors = ["Christopher Strnad <strnadchristopher@gmail.com>"]
description = "A pastebin clone written in Rust. Allows encrypting by returning a password string that can be passed like /<id>/<password>"
repository = "https://github.com/strnadchristopher/pasta-bin"
exclude = ["/target"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magic-crypt = "3.1.13"
rand = "0.8.5"
rocket = { version = "=0.5.0-rc.4"}
serde_json = "1.0.108"
[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
